k8/Ingress/frontend-ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
  - host: prodstore-ingress.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: frontend-service
          servicePort: 80
        path: /
